# image-optimiser

./: README.md  docker-compose.yml
.claude/: settings.local.json
backend/: .env  .gitignore  Dockerfile  main.py  pyproject.toml
backend/api/: b2_status.py  download.py  download_all.py  status.py  upload.py
backend/api/v1/: download.py  optimize.py  status.py
backend/core/: api_auth.py  b2_storage.py  cleanup.py  constants.py  file_validation.py  image_pipeline.py  job_store.py  rate_limiter.py
backend/models/: schemas.py
backend/uploads/: .gitkeep
backend/uploads/02c0da95f804/optimized/: ronaldo-medium.avif  ronaldo-original.avif  ronaldo-thumbnail.avif
backend/uploads/45b741964429/optimized/: Acer_Wallpaper_02_5000x2813-1920x1080.avif
backend/uploads/77158c123afc/optimized/: ronaldo-1200x800.avif
backend/uploads/9338244fffd0/optimized/: test_image-1200x800.avif
frontend/: nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ComparisonSlider.tsx  DownloadButton.tsx  FolderTree.tsx  FormatBadge.tsx  ImageCard.tsx  MoveToFolderDropdown.tsx  ProgressBar.tsx  ResolutionSelector.tsx  ResultsGrid.tsx  StagedImageCard.tsx  StatsBar.tsx  UploadZone.tsx
frontend/src/hooks/: useJobPolling.ts  useUpload.ts
frontend/src/types/: index.ts
